--- a/3.0-master/css/style.css
+++ b/3.0-master/css/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
 @import "base.css"; /* calling the css file with the fonts and basic styles */
 /*
 
@@ -48,7 +49,7 @@ body > header.hero {
   color: white;
   align-items: center;
   padding: 0 10%;
-  z-index: 10;
+  z-index: 1000;
 }
 
 nav > ul {
@@ -72,7 +73,7 @@ nav > ul > li > a {
 }
 
 nav > ul > li > .join-ecx{
-  background: #3E84F8;
+  background: #FFBD08;
   padding: 18px 47px;
   border-radius: 5px;
 }
@@ -116,16 +117,23 @@ nav > ul > li > .join-ecx{
   nav > ul {
     flex-direction: column;
     position: fixed;
-    background: hsl(231 77% 90%/ 0.5);
+    background: hsl(230 35% 7% / 0.85);
     inset: 0 0 0 30%;
     padding: min(6rem, 15vh) 2rem;
     margin: 0;
     z-index: 1000;
     transform: translateX(100%);
     transition: transform 500ms ease-in-out;
-    -webkit-backdrop-filter: blur(0.05);
-    backdrop-filter: blur(1.0rem);
+    /* -webkit-backdrop-filter: blur(0.05); */
+    /* backdrop-filter: blur(1.0rem); */
   }
+
+  @supports (backdrop-filter: blur(2.0rem)) {
+    nav > ul {
+        background: hsl(230 35% 7% / 0.5 );
+        backdrop-filter: blur(1.5rem);
+    }
+}
 
   nav > .primary-navigation[data-visible="true"] {
     transform: translateX(0%);
@@ -134,6 +142,11 @@ nav > ul > li > .join-ecx{
   nav > ul > li {
     padding: 1rem 0;
   }
+
+  nav > ul > li > a{
+    font-size: 24px;
+  }
+
   .mobile-nav-toggle {
     display: block;
     position: absolute;
@@ -152,6 +165,8 @@ nav > ul > li > .join-ecx{
     background: url(../assets/mobile-menu/icon-close.svg);
     background-repeat: no-repeat;
    }
+
+
 
 }
 
@@ -223,7 +238,7 @@ body > header.hero > #hero-sect #hero-txt {
   text-align: center;
 }
 body > header.hero > #hero-sect #hero-txt h1 {
-  font-family: "Satoshi-900";
+  font-family: 'Varela Round', sans-serif;
   line-height: 85px;
   font-size: 66px;
 }
@@ -1626,118 +1641,306 @@ OUR TEAM SECTION
   }
 }
 
-/* ------------ */
+/* -------------- */
 /* Events Section */
-/* ------------ */
+/* -------------- */
+
 section.events {
+  background: #F3F8FF;
+  padding: 8rem 0;
+}
+
+.events {
   width: 100%;
-  margin: 2em auto;
+
 }
-section.events .title {
-  font-family: 'Poppins-700';
-  font-size: 36px;
+
+.events > h2 {
   text-align: center;
-  color: #3E3934;
-}
-section.events .links{
-  display: none;
 }
 
 
-.events .card-wrapper, .card-wrapper2 {
-  margin: 0 1em;
-}
-
-.events .card{
+.event-card {
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  background: rgba(255, 255, 255, 0.3);
-  box-shadow: 0px 49px 47px rgba(0, 0, 0, 0.07);
+  display: relative;
+  background-color: #fff;
+  max-width: 40rem;
+  width: 90%;
+  margin: 2rem auto;
   padding: 1rem;
-  margin: 1em;
+  box-shadow: 0px 46px 46px rgba(0, 9, 32, 0.07);
   border-radius: 8px;
 }
 
-.events .card > h6 {
-  font-family: 'Nunito-700';
+.event-card .event-date {
+  position: relative;
+  text-align: center;
+  padding-right: 2rem;
+  padding-left: 1rem;
+}
+
+.event-card .event-date > h2 {
+  font-family: 'Inter';
   font-weight: 700;
-  font-size: 1.5em;
-  margin: 1em 0;
+  font-size: 48px;
+  text-align: center;
+  letter-spacing: -0.015em;
+  color: #4D4D4D;
 }
 
-.events .card > button {
+.event-card .event-date > div {
+  position: absolute;
+  width: 0px;
+  height: 50px;
+  border: 1px solid #D5D5D5;
+  right: 0;
+  top: 1rem;
+
+}
+
+.event-card .event-date > p {
+  font-family: 'Inter';
+  font-weight: 700;
+  font-size: 20px;
+  text-align: center;
+  letter-spacing: -0.015em;
+  color: #3F3FD1;
+}
+
+.event-title-card {
   display: flex;
-  padding: 18px 16px;
-  background: #EF4239;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
+  justify-content: space-between;
+  flex: 1;
+  padding-inline: 1.5rem;
 }
 
-.events .card > p {
-  text-align: justify;
-  font-family: 'Nunito-400';
+.event-title-card .event-title .title {
+  font-family: 'Inter';
+  font-weight: 600;
+  font-size: 22px;
+  color: #4D4D4D;
+  padding-bottom: 2rem;
+}
+
+
+
+.event-title-card .event-learn-more {
+  display: flex;
+  align-items: center;
+  font-family: 'Inter';
+  font-weight: 600;
+  font-size: 22px;
+  color: #4284F7;
+}
+
+.event-title-card .clock-time {
+  display: flex;
+  align-items: center;
+  font-family: 'Inter';
   font-weight: 400;
-  font-size: 1rem;
-  margin: 0 0 2em 0;
-  color: #000000;
+  font-size: 16px;
+  letter-spacing: -0.015em;
+  color: #808080;
 }
 
-.events .card > .card-image > img {
+.event-title-card .clock-time > span {
+  padding-right: 0.2rem;
+}
+
+.events-btn {
+  margin: 0 auto;
+  /* width: 100%; */
+  padding-top: 64px;
+  text-align: center;
+}
+
+.events-btn a {
+  padding: 1rem 2rem;
+  color: #fff;
+  font-family: 'Inter';
+  font-weight: 700;
+  text-decoration: none;
+  max-width: fit-content;
+  font-size: 20px;
+  background: #4284F7;
+  border-radius: 8px;
+  letter-spacing: -0.015em;
+}
+
+.events-btn a > span {
+  align-items: center;
+  padding-left: 0.3rem;
+}
+
+.events .events-upcoming {
+  font-family: 'Inter-700';
+  font-size: 36px;
+  margin-top: 72px;
+  color: #2B2B2B;
+}
+
+.events .events-heading-title {
+  font-family: 'Inter-700';
+  font-size: 36px;
+  color: #2B2B2B;
+}
+
+@media (max-width: 35em) {
+  .event-title-card .event-title {
+      padding-left: 0.2rem;
+  }
+
+  .event-title-card .event-title .title{
+      font-size: 16px;
+      padding-bottom: 0.5rem;
+      padding-top: 1.2rem;
+  }
+
+  .event-card {
+      padding: 0.1rem;
+      /* align-items: center; */
+  }
+
+  .event-title-card {
+      padding-inline: 0.2rem;
+  }
+
+  .event-title-card .clock-time{
+      font-size: 12px;
+      padding-bottom: 0.8rem;
+      margin-bottom: 0.5rem;
+  }
+
+  .event-title-card .event-learn-more {
+      font-size: 16px;
+  }
+  .event-card .event-date > h2 {
+      font-size: 24px;
+      padding-top: 1.2rem;
+  }
+  .event-card .event-date > p {
+      font-size: 14px;
+  }
+}
+
+.events-slide-container{
+  /* height: 1500px; */
+}
+
+.events-image-wrapper{
+  display: flex;
+  justify-content:center;
+  align-items: center;
+}
+
+.events-slide-content {
+  overflow: hidden;
+}
+
+.events-image {
+  position: relative;
+  border: 3px indigo solid;
+}
+
+.events-image > h2 {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  font-family: 'Inter-400';
+  font-size: 24px;
+  color: #fff;
+  padding-bottom: 20px;
+  padding: 20px 24px;
+  background: rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(3px);
+}
+
+/* .events-slide-container {
+  height: 500px;
+} */
+
+/* .events-slide-container h2{
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  font-family: 'Inter';
+  font-size: 24px;
+  color: #fff;
+  height: 10%;
+  background: rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+} */
+
+/* .events-image-wrapper {
+  display: flex;
+}
+
+.events-image {
+  height: 500px;
+  width: 500px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: url(../assets/images/grand.jpg);
+} */
+
+/* --------------- */
+/* Gallery Section */
+/* --------------- */
+
+section.gallery {
+  background: #fff;
+  padding: 128px 0;
+}
+
+.gallery-title {
+  text-align: center;
+}
+
+.gallery-title > h2 {
+  font-family: 'Inter-700';
+  font-size: 36px;
+  padding-bottom: 16px;
+  color: #2B2B2B;
+}
+
+.gallery-title > p {
+  font-family: 'Inter-400';
+  font-size: 21px;
+  color: #2B2B2B;
+}
+
+.gallery-slide-container{
+  position: relative;
+  padding-left: 6rem;
+  width: 100%;
+  padding: 40px 0;
+}
+
+.gallery-image-wrapper{
+  display: flex;
+}
+
+.gallery-slide-content {
+  overflow: hidden;
+}
+
+.gallery-image {
+  height: 500px;
+  width: 500px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.gallery-image .gallery-img {
+  height: 100%;
   width: 100%;
   object-fit: cover;
 }
 
-.events .card > button > span {
-  padding: 0 8px;
-}
-
-
-@media (min-width: 35em) {
-  section.events .title{
-      text-align: center;
-      margin: 0 6rem;
-  }
-
-  section.events .links {
-      margin: 0 6rem;
-      display: block;
-  }
-
-  section.events .links a{
-  font-family: 'Inter';
-  font-weight: 700;
-  font-size: 24px;
-  padding: 0.5em 0;
-  color: #3E3934;
-  text-align: center;
-  text-decoration: none;
-  } 
-  section.events .links a:first-child{
-      margin-right: 218px;
-  }
-  section.events .links a:last-child {
-      color: #C4C4C4;
-  }
-
-  .events .card-wrapper {
-      display: flex;
-      flex-wrap: wrap;
-      margin: 1em 6em;
-  }
-
-  .events .card-wrapper2 {
-      display: flex;
-      flex-wrap: wrap;
-      margin: 2em 6em;
-  }
-
-  .events .card {
-      width: 50%;
-      margin: 0;
-  }
-}
 
 
 /*
